--- a/Blogpost.html
+++ b/Blogpost.html
@@ -3,8 +3,12 @@
         <title> Titulo del post </title>
         <body>
             <link rel="stylesheet" href="css/Estilo.css">
-            <h1>Aquí haremos el blog post</h1>
-            <p>Aquí va un parrafo</p>
+            <div id="container">
+                <div id="container">
+                    <h1>Titulo atractivo e interesante</h1>
+                    <p>Aquí va un parrafo igual de interesante que es parte de una rama</p>
+                </div>
+            </div>
         </body>
     </head>    
 </html>    
