--- a/Blogpost.html
+++ b/Blogpost.html
@@ -4,6 +4,9 @@
         <body>
             <link rel="stylesheet" href="css/Estilo.css">
             <div id="container">
+                <div id="cabecera">
+                    cabecera
+                </div>
                 <div id="container">
                     <h1>Titulo atractivo e interesante</h1>
                     <p>Aquí va un parrafo igual de interesante que es parte de una rama</p>
