Finalizada la cabecera

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -5,7 +5,8 @@
             <link rel="stylesheet" href="css/Estilo.css">
             <div id="container">
                 <div id="cabecera">
-                    cabecera
+                   SANTURIU
+                   <samp id="tagline"> El mejor espadachin</samp>
                 </div>
                 <div id="container">
                     <h1>Titulo atractivo e interesante</h1>
