agregado el contenido final del blog

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -7,6 +7,7 @@
                 <div id="container">
                     <h1>Titulo atractivo e interesante</h1>
                     <p>Aquí va un parrafo igual de interesante que es parte de una rama</p>
+                    <p> here i doing many things amazing </p>
                 </div>
             </div>
         </body>
