Cambios al parrafo

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -11,7 +11,9 @@
                 <div id="container">
                     <h1>Titulo atractivo e interesante</h1>
                     <p>Aquí va un parrafo igual de interesante que es parte de una rama</p>
-                    <p> here i doing many things amazing </p>
+                    <p> here i doing many things amazing.
+                        Pimpom es un muñeco. muy guapo y de cartón.
+                    se lava la carita con agua y con jabón </p>
                 </div>
             </div>
         </body>
