Modificacion de la cabecera y cambio de color del parrafo

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -6,7 +6,7 @@
             <div id="container">
                 <div id="cabecera">
                    SANTURIU
-                   <samp id="tagline"> El mejor espadachin</samp>
+                   <samp id="tagline"> El mejor espadachin de todos</samp>
                 </div>
                 <div id="container">
                     <h1>Titulo atractivo e interesante</h1>
