Modifique la cabecera y cambio de color del parrafo y zoro es mejor

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -6,7 +6,7 @@
             <div id="container">
                 <div id="cabecera">
                    SANTURIU
-                   <samp id="tagline"> El mejor espadachin</samp>
+                   <samp id="tagline"> El mejor espadachin de todos en el reino de one piece</samp>
                 </div>
                 <div id="container">
                     <h1>Titulo atractivo e interesante</h1>
@@ -14,6 +14,7 @@
                     <p> here i doing many things amazing.
                         Pimpom es un muñeco. muy guapo y de cartón.
                     se lava la carita con agua y con jabón </p>
+                    <p>Obvio que Zoro es el mejor</p>
                 </div>
             </div>
         </body>
