--- a/Blogpost.html
+++ b/Blogpost.html
@@ -6,7 +6,7 @@
             <div id="container">
                 <div id="cabecera">
                    SANTURIU
-                   <samp id="tagline"> El mejor espadachin de todos 2.0</samp>
+                   <samp id="tagline"> El mejor espadachin de todos, pos Obvio</samp>
                 </div>
                 <div id="container">
                     <h1>Titulo atractivo e interesante</h1>
